--- a/CI/.htaccess
+++ b/CI/.htaccess
@@ -1,3 +1,3 @@
 RewriteEngine on
-RewriteCond $1 !^(index\.php|js|css)
+RewriteCond $1 !^(index\.php|js|css|assets/img|assets/fonts|assets/css|assets/js|assets/i|uploads)
 RewriteRule ^(.*)$ index.php/$1 [L]
